--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@
 #nature-dropdown {
     display: none;
 }
+
+form  { display: table;      }
+p     { display: table-row;  }
+input { display: table-cell; }
+select { display: table-cell; }
